[gd_scene load_steps=7 format=3 uid="uid://cjri3m6cpa0ts"]

[ext_resource type="Texture2D" uid="uid://ci3iqvfim2teq" path="res://Assets/Tower_defense_asset_ pack/Enemies/Enemyes.png" id="1_gbpkx"]
[ext_resource type="Script" path="res://Components/enemy_movement_component.gd" id="1_omn41"]
[ext_resource type="Script" path="res://Scenes/Characters/Enemy/BaseEnemy.gd" id="1_oynpi"]
[ext_resource type="Script" path="res://Components/health_component.gd" id="2_hld5u"]
[ext_resource type="Script" path="res://Components/hurtbox_component.gd" id="4_sg738"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rlwmp"]

[node name="Enemy" type="PathFollow2D" groups=["enemy"]]
h_offset = -8.0
v_offset = -8.0
rotates = false
cubic_interp = false
loop = false
script = ExtResource("1_oynpi")
money_on_die = 2

[node name="HealthBar" type="ProgressBar" parent="."]
self_modulate = Color(0, 1, 0, 1)
texture_filter = 1
offset_top = 14.0
offset_right = 16.0
offset_bottom = 18.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(8, -1)
texture = ExtResource("1_gbpkx")
hframes = 3
vframes = 4

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_hld5u")
max_health = 20.0

[node name="EnemyMovementComponent" type="Node" parent="." node_paths=PackedStringArray("Actor")]
script = ExtResource("1_omn41")
speed = 20
Actor = NodePath("..")

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
position = Vector2(8, 15)
collision_layer = 16
collision_mask = 0
script = ExtResource("4_sg738")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_rlwmp")

[connection signal="changed" from="HealthComponent" to="." method="_on_health_component_changed"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
